--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,14 +6,8 @@
 </head>
 <body>
 	<header>Find a Friend...Through Music</header>
-	<h1>Please push the start button to begin a survey. This survey will ask you certain question about what kind of music you like. Please answer accurately. Once you are done, this application will match you up with the person who closest resembles your musical likes</h1>
+	<h1>Please push the start button to enter your personal information and begin the survey. This survey will ask you certain question about what kind of music you like. Please answer accurately. Once you are done, this application will match you up with the person who closest resembles your musical likes</h1>
 	<a href="/survey"><button type = "button" id="start">Start Your Survey</button></a>
 </body>
-<script type="text/javascript">
-	// $.get('http://localhost:8000/survey', function(data){
-	// 	$('#start').click(function(){
- // 			console.log("this works");
- // 		})
-	// });
-</script>
+
 </html>
