--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,35 +3,35 @@
 <head>
 	<title>FriendFinder Survey Page</title>
 	<script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
-	<script type="text/javascript" src="../routing/api-routes.js"></script>
+	<script type="text/javascript" src="../routing/html-routes.js"></script>
 </head>
 <body>
-	<div class = "personalInfo">
-		<h2>Please Enter Your First Name<h2>
-			<input type = 'text' id = 'nameInput' />
-			<button type = 'button' id = 'nameButton'>Submit Name</button>
-		<h2>Please Upload A Picture</h2>
-			<input type = 'file' />
-			<div class = 'imageDiv'></div>
-			<br>
-		<button type = "button" id = "surveyTime">Survey Time</button>
-	</div>
-	<div class = "survey">
-		<h2>Please Give Serious Thought Before You Answer!</h2>
-		<h1 id="question"></h1>
-		<div id = "surveyDiv">
-			<form id="surveyForm">
-					<ul class = "options">
-						<ul><input type="radio" id="v1" name="q" value=1>1</ul>
-			            <ul><input type="radio" id="v2" name="q" value=2>2</ul>
-			            <ul><input type="radio" id="v3" name="q" value=3>3</ul>
-			            <ul><input type="radio" id="v4" name="q" value=4>4</ul>
-			            <ul><input type="radio" id="v5" name="q" value=5>5</ul>
-					</ul>
-					<button id="next" type="button">Next</button>
-			</form>
+	<form id="surveyForm" method="POST">
+		<div class = "personalInfo">
+			<h2>Please Enter Your First Name<h2>
+				<input type = 'text' id = 'nameInput' />
+			<h2>Please Upload A Picture</h2>
+				<input type = 'file' />
+				<div class = 'imageDiv'></div>
+				<br>
+			<button type = "button" id = "surveyTime">Survey Time</button>
 		</div>
-	</div>
-	<div class = "thankYou"></div>
+		<div class = "survey">
+			<h2>Please Give Serious Thought Before You Answer!</h2>
+			<h1 id="question"></h1>
+			<div id = "surveyDiv">
+				<ul class = "options">
+					<ul><input type="radio" id="v1" name="q" value=1>1</ul>
+		            <ul><input type="radio" id="v2" name="q" value=2>2</ul>
+		            <ul><input type="radio" id="v3" name="q" value=3>3</ul>
+		            <ul><input type="radio" id="v4" name="q" value=4>4</ul>
+		            <ul><input type="radio" id="v5" name="q" value=5>5</ul>
+				</ul>
+				<button id="next" type="button">Next</button>
+			</div>
+		</div>
+		<div class = "thankYou"></div>
+		<input type = "submit" value = "SUBMIT" id = "submitButton"><a href="/"></a></input>
+	</form>
 </body>
 </html>
