adding to the text file

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="../routing/html-routes.js"></script>
 </head>
 <body>
-	<form id="surveyForm" method="POST">
+	<form id="surveyForm">
 		<div class = "personalInfo">
 			<h2>Please Enter Your First Name<h2>
 				<input type = 'text' id = 'nameInput' />
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 		<div class = "thankYou"></div>
-		<input type = "submit" value = "SUBMIT" id = "submitButton"><a href="/"></a></input>
+		<input type = "submit" value = "SUBMIT" id = "submitButton" />
 	</form>
 </body>
 </html>
