--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,36 +2,96 @@
 <html>
 <head>
 	<title>FriendFinder Survey Page</title>
-	<script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+	<script type="text/javascript" src="../jquery-2.2.4.min.js"></script>
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../data/friends.js"></script>
 	<script type="text/javascript" src="../routing/html-routes.js"></script>
 </head>
 <body>
 	<form id="surveyForm">
-		<div class = "personalInfo">
-			<h2>Please Enter Your First Name<h2>
-				<input type = 'text' id = 'nameInput' />
-			<h2>Please Upload A Picture</h2>
-				<input type = 'file' />
-				<div class = 'imageDiv'></div>
-				<br>
-			<button type = "button" id = "surveyTime">Survey Time</button>
-		</div>
-		<div class = "survey">
-			<h2>Please Give Serious Thought Before You Answer!</h2>
-			<h1 id="question"></h1>
-			<div id = "surveyDiv">
-				<ul class = "options">
-					<ul><input type="radio" id="v1" name="q" value=1>1</ul>
-		            <ul><input type="radio" id="v2" name="q" value=2>2</ul>
-		            <ul><input type="radio" id="v3" name="q" value=3>3</ul>
-		            <ul><input type="radio" id="v4" name="q" value=4>4</ul>
-		            <ul><input type="radio" id="v5" name="q" value=5>5</ul>
-				</ul>
-				<button id="next" type="button">Next</button>
+		<div id = "surveyDiv">
+			<div class = "personalInfo">
+				<h2>Please Enter Your First Name</h2>
+					<input type = 'text' id = 'nameInput' />
+				<h2>Please Upload A Picture</h2>
+					<input type = 'file' />
+					<div class = 'imageDiv'></div>
+					<br>
+				<button type = "button" id = "surveyTime">Survey Time</button>
 			</div>
+			<div class = "survey">
+				<h2>Please Give Serious Thought Before You Answer!</h2>
+				<h1 id="question"></h1>
+				<div id = "surveyDiv">
+					<ul class = "options">
+						<ul><input type="radio" id="v1" name="q" value=1>1</ul>
+			            <ul><input type="radio" id="v2" name="q" value=2>2</ul>
+			            <ul><input type="radio" id="v3" name="q" value=3>3</ul>
+			            <ul><input type="radio" id="v4" name="q" value=4>4</ul>
+			            <ul><input type="radio" id="v5" name="q" value=5>5</ul>
+					</ul>
+					<button id="next" type="button">Next</button>
+				</div>
+			</div>
+			<div class = "thankYou"></div>
+			<input type = "submit" value = "SUBMIT" id = "submitButton" />
 		</div>
-		<div class = "thankYou"></div>
-		<input type = "submit" value = "SUBMIT" id = "submitButton" />
 	</form>
+	<div class = "matchDiv"></div>
+	<div id = "myModal" class="modal">
+	  <div class = "modal-content">
+	    <div class = "modal-header">
+	      <button type = "button" class = "close" data-dismiss="modal">X</button>
+	      	<h2>Here is your match</h2>
+	    </div>
+	    <div class = "modal-body">
+	      	<h2>Name and Picture</h2>
+	      	<div id = "nameAndPicDiv"></div>
+	    </div>
+	    <div class = "modal-footer">
+	    	<h2>Thank you for using</h2>
+	    </div>
+	  </div>
+	</div>
 </body>
+<!-- <script type="text/javascript">
+	function hideThis(){
+		$('#surveyDiv').hide();
+		$('.matchDiv').show();
+	}
+</script> -->
+<style type="text/css">
+	/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+</style>
 </html>
