--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -37,21 +37,21 @@
 			</div>
 			<div class = "thankYou"></div>
 			<input type = "submit" value = "SUBMIT" id = "submitButton" />
+			<br>
+			<a href = '/'><button type = "button" id="submitHome">Home</button></a>
 		</div>
 	</form>
 	<div class = "matchDiv"></div>
 	<div id = "myModal" class="modal">
 	  <div class = "modal-content">
 	    <div class = "modal-header">
-	      <button type = "button" class = "close" data-dismiss="modal">X</button>
-	      	<h2>Here is your match</h2>
+<!-- 	      <button type = "button" class = "close" data-dismiss="modal">X</button> -->
+	      <h2>Here is your match</h2>
 	    </div>
-	    <div class = "modal-body">
-	      	<h2>Name and Picture</h2>
-	      	<div id = "nameAndPicDiv"></div>
-	    </div>
+	    <div class = "modal-body"></div>
 	    <div class = "modal-footer">
 	    	<h2>Thank you for using</h2>
+	    	<a href = '/'><button type = "button">Home</button></a>
 	    </div>
 	  </div>
 	</div>
