--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,6 +23,8 @@
 			</div>
 			<div class = "survey">
 				<h2>Please Give Serious Thought Before You Answer!</h2>
+				<br>
+				<h3>1 = strongly disagree, 5 = strongly agree</h3>
 				<h1 id="question"></h1>
 				<div id = "surveyDiv">
 					<ul class = "options">
@@ -45,7 +47,6 @@
 	<div id = "myModal" class="modal">
 	  <div class = "modal-content">
 	    <div class = "modal-header">
-<!-- 	      <button type = "button" class = "close" data-dismiss="modal">X</button> -->
 	      <h2>Here is your match</h2>
 	    </div>
 	    <div class = "modal-body"></div>
@@ -56,12 +57,6 @@
 	  </div>
 	</div>
 </body>
-<!-- <script type="text/javascript">
-	function hideThis(){
-		$('#surveyDiv').hide();
-		$('.matchDiv').show();
-	}
-</script> -->
 <style type="text/css">
 	/* The Modal (background) */
 .modal {
