--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,9 +3,9 @@
 <head>
 	<title>FriendFinder Survey Page</title>
 	<script type="text/javascript" src="../jquery-2.2.4.min.js"></script>
-	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css" type='text/css'>
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../data/friends.js"></script>
 	<script type="text/javascript" src="../routing/html-routes.js"></script>
 </head>
