--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,7 +9,7 @@
 			<h2>Find a Friend or a Mate...Through Music</h2>
 		</header>
 		<h3>Please push the start button to enter your personal information and then begin the survey. This survey will ask you certain questions about what kind of music you like. Please answer accurately. Once you are done, this application will match you up with the person who closest resembles your musical likes.</h3>
-		<a href="/survey"><button type = "button" id="start">Start Your Survey</button></a>
+		<a href="http://arcane-garden-21263.herokuapp.com/survey"><button type = "button" id="start">Start Your Survey</button></a>
 	</body>
 	<style type="text/css">
 		button{
