--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -40,7 +40,7 @@
 			<div class = "thankYou"></div>
 			<input type = "submit" value = "SUBMIT" id = "submitButton" />
 			<br>
-			<a href = '/'><button type = "button" id="submitHome">Home</button></a>
+			<a href = 'http://arcane-garden-21263.herokuapp.com/'><button type = "button" id="submitHome">Home</button></a>
 		</div>
 	</form>
 	<div class = "matchDiv"></div>
